--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
+    "react-countdown-circle-timer": "^2.5.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
