--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.1.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -61,8 +63,6 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "json-server": "^0.16.3",
-    "json-server-auth": "^2.1.0"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
