Add E2E tests, with Cypress framework
    Add users experience tests for every single page, including
    the unauthenticated part of the application.
    Prepare localhost and production environment for tests.
    Add a bunch of "id" attributes into components to easier grab than
    in tests.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "cypress/globals": true
     },
     "extends": [
         "plugin:react/recommended",
+        "plugin:cypress/recommended",
         "airbnb"
     ],
     "parserOptions": {
@@ -15,12 +17,19 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "cypress"
     ],
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "linebreak-style": "off",
         "no-unused-vars": "warn",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "cypress/no-assigning-return-values": "error",
+        "cypress/no-unnecessary-waiting": "error",
+        "cypress/assertion-before-screenshot": "warn",
+        "cypress/no-force": "warn",
+        "cypress/no-async-tests": "error",
+        "cypress/no-pause": "error"
     }
 }
